lab2.1/Code/compile.output
flex -o ./lex.yy.c ./lexical.l
bison -o ./syntax.tab.c -d -t -v ./syntax.y
./syntax.y: warning: 1 shift/reduce conflict [-Wconflicts-sr]
gcc -c ./syntax.tab.c -o ./syntax.tab.o
gcc -std=c99 -ggdb   -c -o 10.o 10.c
10.c: In function 'initActionTable10':
10.c:129:5: error: 'Compiler_Failure' undeclared (first use in this function)
     Compiler_Failure;
     ^
10.c:129:5: note: each undeclared identifier is reported only once for each function it appears in
<builtin>: recipe for target '10.o' failed
make: *** [10.o] Error 1
